# handin-3-sebbe

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  functions.c  functions.h  handin3.c
test/: CMakeLists.txt  test_g_x.c  test_h_x.c
